<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="exo_controls_fastforward_description">Fast forward</string>
    <string name="exo_controls_next_description">Next track</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_previous_description">Previous track</string>
    <string name="exo_controls_rewind_description">Rewind</string>
    <string name="exo_controls_stop_description">Stop</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="N_A">N/A</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_unknown">Unknown</string>
    <string name="TrackType_video">Video</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_error_button">OK</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: ExoMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_none">Player: None</string>
    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>
    <string name="a_cache">a-cache</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="action_search">search</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="app_name">Xtream IPTV Player</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="banner_ad_unit_id">ca-app-pub-6139190681232718/3883254028</string>
    <string name="bit_rate">bit_rate</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="channel_logo_desc">Channel logo</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="close">Close</string>
    <string name="default_web_client_id">19120603289-skpg2la3q3ks7q3ub49dvofudeumo32c.apps.googleusercontent.com</string>
    <string name="disconnect">Disconnect</string>
    <string name="error_field_required">This field is required</string>
    <string name="exit">Exit</string>
    <string name="expire_date">Expire Date</string>
    <string name="expire_date_label">Expire Date</string>
    <string name="firebase_database_url">https://xtream-iptv-player.firebaseio.com</string>
    <string name="fps">fps</string>
    <string name="gcm_defaultSenderId">19120603289</string>
    <string name="google_api_key">AIzaSyCV4liQLhIdPbRkwn-KoZBfUNvLYWBAReA</string>
    <string name="google_app_id">1:19120603289:android:9db11543fc52c02b</string>
    <string name="google_crash_reporting_api_key">AIzaSyCV4liQLhIdPbRkwn-KoZBfUNvLYWBAReA</string>
    <string name="google_storage_bucket">xtream-iptv-player.appspot.com</string>
    <string name="ijkplayer_dummy" />
    <string name="load_cost">load-cost</string>
    <string name="logo_desc">logo</string>
    <string name="media_information">Media Information</string>
    <string name="mi__selected_audio_track">*</string>
    <string name="mi__selected_subtitle_track">*</string>
    <string name="mi__selected_video_track">*</string>
    <string name="mi_bit_rate">Bit rate</string>
    <string name="mi_channels">Channels</string>
    <string name="mi_codec">Codec</string>
    <string name="mi_frame_rate">Frame rate</string>
    <string name="mi_language">Language</string>
    <string name="mi_length">Length</string>
    <string name="mi_media">Media</string>
    <string name="mi_pixel_format">Pixel format</string>
    <string name="mi_player">Player</string>
    <string name="mi_profile_level">Profile level</string>
    <string name="mi_resolution">Resolution</string>
    <string name="mi_sample_rate">Sample rate</string>
    <string name="mi_stream_fmt1">Stream #%d</string>
    <string name="mi_type">Type</string>
    <string name="no_epg">No Epg Available …</string>
    <string name="no_exp_date">Unlimited</string>
    <string name="password_label">Password</string>
    <string name="password_lbl">Password</string>
    <string name="password_toggle_content_description">Toggle password visibility</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message history</string>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_header_general">Player Choice</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_key_enable_background_play">pref.enable_background_play</string>
    <string name="pref_key_enable_detached_surface_texture">pref.enable_detached_surface_texture</string>
    <string name="pref_key_enable_no_view">pref.enable_no_view</string>
    <string name="pref_key_enable_surface_view">pref.enable_surface_view</string>
    <string name="pref_key_enable_texture_view">pref.enable_texture_view</string>
    <string name="pref_key_last_directory" />
    <string name="pref_key_media_codec_handle_resolution_change">pref.media_codec_handle_resolution_change</string>
    <string name="pref_key_pixel_format">pref.pixel_format</string>
    <string name="pref_key_player">pref.player</string>
    <string name="pref_key_using_android_player">pref.using_android_player</string>
    <string name="pref_key_using_media_codec">pref.using_media_codec</string>
    <string name="pref_key_using_media_codec_auto_rotate">pref.using_media_codec_auto_rotate</string>
    <string name="pref_key_using_mediadatasource">pref.using_mediadatasource</string>
    <string name="pref_key_using_opensl_es">pref.using_opensl_es</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_summary_enable_background_play">need Android 4.0+</string>
    <string name="pref_summary_enable_detached_surface_texture" />
    <string name="pref_summary_enable_no_view" />
    <string name="pref_summary_enable_surface_view" />
    <string name="pref_summary_enable_texture_view" />
    <string name="pref_summary_media_codec_handle_resolution_change" />
    <string name="pref_summary_using_android_player" />
    <string name="pref_summary_using_media_codec" />
    <string name="pref_summary_using_media_codec_auto_rotate" />
    <string name="pref_summary_using_mediadatasource" />
    <string name="pref_summary_using_opensl_es" />
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_title_enable_background_play">Enable background play</string>
    <string name="pref_title_enable_detached_surface_texture">Enable detached SurfaceTexture</string>
    <string name="pref_title_enable_no_view">Enable NoView</string>
    <string name="pref_title_enable_surface_view">Enable SurfaceView</string>
    <string name="pref_title_enable_texture_view">Enable TextureView</string>
    <string name="pref_title_general">General</string>
    <string name="pref_title_ijkplayer_audio">Audio: ijkplayer</string>
    <string name="pref_title_ijkplayer_video">Video: ijkplayer</string>
    <string name="pref_title_media_codec_handle_resolution_change">MediaCodec handle resolution change</string>
    <string name="pref_title_misc">Misc</string>
    <string name="prompt_host">Host URI</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username">Username</string>
</resources>