<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="bottom" android:orientation="vertical" android:background="#cc000000" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:paddingTop="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageButton android:id="@id/prev" android:contentDescription="@string/exo_controls_previous_description" style="@style/ExoMediaButton.Previous" />
        <ImageButton android:id="@id/rew" android:contentDescription="@string/exo_controls_rewind_description" style="@style/ExoMediaButton.Rewind" />
        <ImageButton android:id="@id/play" style="@style/ExoMediaButton" />
        <ImageButton android:id="@id/ffwd" android:contentDescription="@string/exo_controls_fastforward_description" style="@style/ExoMediaButton.FastForward" />
        <ImageButton android:id="@id/next" android:contentDescription="@string/exo_controls_previous_description" style="@style/ExoMediaButton.Next" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="#ffbebebe" android:layout_gravity="center_horizontal" android:id="@id/time_current" android:paddingTop="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <SeekBar android:id="@id/mediacontroller_progress" android:layout_width="0.0dip" android:layout_height="32.0dip" android:layout_weight="1.0" style="?android:attr/progressBarStyleHorizontal" />
        <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="#ffbebebe" android:layout_gravity="center_horizontal" android:id="@id/time" android:paddingTop="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>